# Aether

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh
crates/aether-agent-cp/: Cargo.toml
crates/aether-agent-cp/src/: auth.rs  backend.rs  envelope.rs  error.rs  lib.rs  registry.rs
crates/aether-agent-cp/tests/: auth.rs  smoke_stdio.rs  tools_entity.rs  tools_script.rs  tools_sim.rs  tools_ugc.rs  tools_world.rs
crates/aether-asset-pipeline/: Cargo.toml
crates/aether-asset-pipeline/src/: audio.rs  budget.rs  bundle.rs  bundle_writer.rs  compression.rs  gltf_import.rs  hash.rs  import.rs  lib.rs  lod.rs  manifest.rs  mesh.rs  texture.rs
crates/aether-behavior-dsl/: Cargo.toml
crates/aether-behavior-dsl/src/: ast.rs  caps.rs  effects.rs  error.rs  lexer.rs  lib.rs  parser.rs  typeck.rs  types.rs  visual_graph.rs
crates/aether-behavior-dsl/tests/: compile.rs  golden.rs  parse.rs  typeck.rs  visual_roundtrip.rs
crates/aether-build/: Cargo.toml
crates/aether-build/src/: config.rs  desktop.rs  lib.rs  toolchain.rs
crates/aether-canonical-shim/: Cargo.toml
crates/aether-canonical-shim/src/: canonical.rs  content_address.rs  error.rs  lib.rs  wire.rs
crates/aether-cli/: Cargo.toml
crates/aether-cli/src/: lib.rs  main.rs  manifest.rs
crates/aether-compliance/: Cargo.toml
crates/aether-compliance/src/: deletion.rs  export.rs  keystore.rs  legal_hold.rs  lib.rs  pseudonymize.rs  retention.rs
crates/aether-creator-studio/: Cargo.toml
crates/aether-creator-studio/src/: dimension.rs  editor.rs  lib.rs  lighting_editor.rs  manifest.rs  manifest_editor.rs  preview.rs  project.rs  prop_editor.rs  scene.rs  scene_serde.rs  selection.rs  terrain.rs  terrain_editor.rs  tools.rs  types_2d.rs  undo.rs
crates/aether-ecs/: Cargo.toml
crates/aether-ecs/examples/: game_loop.rs  visual_sim.rs
crates/aether-ecs/src/: archetype.rs  component.rs  entity.rs  event.rs  game_loop.rs  lib.rs  network.rs  query.rs  resource.rs  save.rs  schedule.rs  stage.rs  system.rs  test_harness.rs  tick.rs  world.rs
crates/aether-gateway/: Cargo.toml
crates/aether-gateway/src/: auth.rs  dispatch.rs  health.rs  lib.rs  metrics.rs  middleware.rs  rate.rs  relay.rs  route.rs  router.rs  runtime.rs
crates/aether-multiplayer/: Cargo.toml
crates/aether-multiplayer/src/: avatar.rs  client.rs  config.rs  lib.rs  protocol.rs  server.rs  simulation.rs
crates/aether-multiplayer/tests/: two_player_integration.rs
crates/aether-network/: Cargo.toml
crates/aether-network/src/: codec.rs  delta.rs  interest.rs  lib.rs  prediction.rs  runtime.rs  transport.rs  types.rs  voice.rs
crates/aether-network/tests/: quic_integration.rs
crates/aether-openxr/: Cargo.toml
crates/aether-openxr/src/: error.rs  frame_loop.rs  hal.rs  input_actions.rs  instance.rs  lib.rs  session.rs  swapchain.rs
crates/aether-persistence/: Cargo.toml
crates/aether-persistence/src/: config.rs  error.rs  health.rs  lib.rs  migration.rs  nats.rs  placement.rs  pool.rs  postgres.rs  redis_client.rs  runtime.rs  snapshot.rs  transactions.rs  wal.rs
crates/aether-registry/: Cargo.toml
crates/aether-registry/src/: analytics.rs  canonical.rs  discovery.rs  lib.rs  manifest.rs  portal.rs  ranking.rs  registry.rs  search.rs  session.rs
crates/aether-schemas/: Cargo.toml
crates/aether-schemas/src/: chunk.rs  content_address.rs  emit.rs  entity.rs  error.rs  lib.rs  migration.rs  quest.rs  script.rs  world_manifest.rs
crates/aether-schemas/tests/: acceptance.rs  content_address.rs  migration.rs  roundtrip.rs
crates/aether-security/: Cargo.toml
crates/aether-security/src/: action_rate_limiter.rs  anti_cheat.rs  auth.rs  encryption.rs  hit_validation.rs  interest_management.rs  jwt.rs  lib.rs  movement_validator.rs  oauth.rs  password.rs  ratelimit.rs  session.rs  teleport_detection.rs  transport.rs  user.rs  wasm.rs
crates/aether-sim-harness/: Cargo.toml
crates/aether-sim-harness/benches/: replay_speed.rs
crates/aether-sim-harness/src/: error.rs  harness.rs  lib.rs  replay.rs  scenario.rs  telemetry.rs  verdict.rs
crates/aether-sim-harness/tests/: golden.rs  harness_roundtrip.rs  scorers.rs
crates/aether-ugc/: Cargo.toml
crates/aether-ugc/src/: approval.rs  artifact.rs  ingest.rs  lib.rs  manifest.rs  moderation.rs  orchestrator.rs  pipeline.rs  pipeline_canonical.rs  runtime.rs  storage.rs  upload.rs  validation.rs  version.rs
crates/aether-ugc/tests/: canonical_pipeline.rs
crates/aether-visual-editor/: Cargo.toml
crates/aether-visual-editor/src/: app.rs  canvas.rs  connection_renderer.rs  interaction.rs  lib.rs  minimap.rs  node_renderer.rs  palette.rs  properties.rs  state.rs  toolbar.rs
crates/aether-vr-emulator/: Cargo.toml
crates/aether-vr-emulator/src/: config.rs  controller.rs  display.rs  hal.rs  head_tracking.rs  lib.rs  session.rs  window.rs
crates/aether-world-editor/: Cargo.toml
crates/aether-world-editor/src/: editor_state.rs  error.rs  lib.rs  mode.rs  project.rs  version.rs
crates/aether-world-runtime/: Cargo.toml
crates/aether-world-runtime/src/: canonical.rs  chunking.rs  events.rs  input_buffer.rs  lib.rs  lifecycle.rs  manifest.rs  prediction.rs  props.rs  rpc.rs  runtime.rs  session.rs  spawn.rs  state_sync.rs  tick.rs
crates/aether-world-vcs/: Cargo.toml
crates/aether-world-vcs/src/: branch.rs  diff.rs  error.rs  lib.rs  merge.rs  remote.rs  review.rs  rollback.rs  shim.rs  sig.rs
crates/aether-world-vcs/tests/: diff_roundtrip.rs  merge.rs  review.rs  rollback.rs
examples/3d-demo/: Cargo.toml
examples/3d-demo/src/: main.rs  render.rs  scene.rs
examples/agent-native-demo/: Cargo.toml  README.md
examples/agent-native-demo/fixtures/: hello.world.yaml  patrol.beh  patrol.scenario.yaml
examples/agent-native-demo/src/: main.rs  stubs.rs
examples/agent-native-demo/tests/: end_to_end.rs
examples/gpu-demo/: Cargo.toml
examples/gpu-demo/src/: camera.rs  geometry.rs  main.rs  scene.rs
examples/multiplayer-demo/: Cargo.toml
examples/multiplayer-demo/src/: client_main.rs  (+1 more)
examples/quest-debug/: Cargo.toml
(+547 files in other folders)
