[workspace]
resolver = "2"
members = [
    "crates/aether-ecs",
    "crates/aether-physics",
    "crates/aether-scripting",
    "crates/aether-renderer",
    "crates/aether-audio",
    "crates/aether-network",
    "crates/aether-persistence",
    "crates/aether-zoning",
    "crates/aether-avatar",
    "crates/aether-input",
    "crates/aether-economy",
    "crates/aether-registry",
    "crates/aether-social",
    "crates/aether-security",
    "crates/aether-deploy",
    "crates/aether-world-runtime",
    "crates/aether-ugc",
    "crates/aether-asset-pipeline",
    "crates/aether-creator-studio",
    "crates/aether-compliance",
    "crates/aether-content-moderation",
    "crates/aether-federation",
    "crates/aether-platform",
    "crates/aether-trust-safety",
    "crates/aether-gateway",
    "crates/aether-behavior-dsl",
]
