[package]
name = "aether-asset-pipeline"
version = "0.1.0"
edition = "2021"
description = "Asset pipeline and bundle format abstraction"

[dependencies]
gltf = "1"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
log = "0.4"
glob-match = "0.2"

[dev-dependencies]
tempfile = "3"
env_logger = "0.11"
