[package]
name = "aether-cli"
version = "0.1.0"
edition = "2021"
description = "CLI binary for the Aether VR engine - run demos and tools without a Rust toolchain"

[[bin]]
name = "aether"
path = "src/main.rs"

[dependencies]
aether-build = { path = "../aether-build" }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
