[package]
name = "aether-compliance"
version = "0.1.0"
edition = "2021"
description = "Privacy and legal compliance primitives"

[dependencies]
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
