[package]
name = "aether-creator-studio"
version = "0.1.0"
edition = "2021"
description = "Creator Studio and world-editing primitives"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
aether-canonical-shim = { path = "../aether-canonical-shim" }
thiserror = "1"
tracing = "0.1"
