[package]
name = "aether-multiplayer"
version = "0.1.0"
edition = "2021"
description = "Networked multiplayer prototype integrating QUIC transport with world runtime"

[dependencies]
aether-network = { path = "../aether-network" }
aether-world-runtime = { path = "../aether-world-runtime" }
serde = { version = "1", features = ["derive"] }
bincode = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "time", "io-util", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "time", "io-util", "test-util"] }
