[package]
name = "aether-schemas"
version = "0.1.0"
edition = "2021"
description = "Canonical content-addressed schemas for the Aether agent-native engine: world manifests, entities, chunks, scripts, quests, CID + migration."

[features]
default = []
# Feature-gates MMORPG-specific primitives (Quest, LootTable).
mmorpg = []

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"
ciborium = "0.2"
ciborium-io = "0.2"
sha2 = "0.10"
thiserror = "1.0.69"
schemars = "0.8"
tracing = "0.1"

[dev-dependencies]
serde_json = "1.0.149"
