[package]
name = "aether-security"
version = "0.1.0"
edition = "2021"
description = "Security, anti-cheat, rate limiting, transport hardening primitives, and authentication"

[dependencies]
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
