[package]
name = "aether-visual-editor"
version = "0.1.0"
edition = "2021"
description = "Visual script editor GUI for the Aether VR Engine"

[dependencies]
aether-creator-studio = { path = "../aether-creator-studio" }
eframe = "0.31"
egui = "0.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
