[package]
name = "aether-world-runtime"
version = "0.1.0"
edition = "2021"
description = "World runtime loading, streaming, and lifecycle primitives"

[dependencies]
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
aether-canonical-shim = { path = "../aether-canonical-shim" }
thiserror = "1"
tracing = "0.1"
