[package]
name = "agent-native-demo"
version = "0.1.0"
edition = "2021"
publish = false
description = "Thin-slice agent-native end-to-end demo (task 66) — an AI agent creates a world, spawns an entity, compiles a patrol behavior, runs a scenario, and signs + merges the resulting diff, all via the real aether-agent-cp ToolRegistry and aether-world-vcs."

[[bin]]
name = "agent-native-demo"
path = "src/main.rs"

[dependencies]
aether-agent-cp = { path = "../../crates/aether-agent-cp" }
aether-world-vcs = { path = "../../crates/aether-world-vcs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
