[package]
name = "aether-gpu-demo"
version = "0.1.0"
edition = "2021"
description = "GPU-accelerated rendering demo using wgpu-based GpuRenderer"

[features]
default = []
gpu-tests = []

[dependencies]
aether-renderer = { path = "../../crates/aether-renderer" }
winit = "0.30"
pollster = "0.4"
log = "0.4"
env_logger = "0.11"
bytemuck = { version = "1", features = ["derive"] }
wgpu = "24"
