[package]
name = "multiplayer-demo"
version = "0.1.0"
edition = "2021"
description = "Demo: multiplayer server and client using QUIC transport"

[[bin]]
name = "mp-server"
path = "src/server_main.rs"

[[bin]]
name = "mp-client"
path = "src/client_main.rs"

[dependencies]
aether-multiplayer = { path = "../../crates/aether-multiplayer" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
